TRex-Java-client/src/polimi/trex/ruleparser/TESLAParser.java
//
// This file is part of T-Rex, a Complex Event Processing Middleware.
// See http://home.dei.polimi.it/margara
//
// Authors: Daniele Rogora
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Lesser General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program.  If not, see http://www.gnu.org/licenses/.
//

// Generated from TESLA.g4 by ANTLR 4.2.2

    package polimi.trex.ruleparser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TESLAParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__12=1, T__11=2, T__10=3, T__9=4, T__8=5, T__7=6, T__6=7, T__5=8, T__4=9, 
		T__3=10, T__2=11, T__1=12, T__0=13, DEFINE=14, FROM=15, WHERE=16, WITHIN=17, 
		CONSUMING=18, BOOL_VAL=19, VALTYPE=20, SEL_POLICY=21, AGGR_FUN=22, OPERATOR=23, 
		BINOP_MUL=24, BINOP_ADD=25, FLOAT=26, INTEGER=27, STRING_VAL=28, PRED_NAME=29, 
		ATTR_NAME=30, PARAM_NAME=31, WS=32;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "')'", "'=>'", "'.'", "','", "'['", "':'", "'('", 
		"';'", "'and'", "':='", "'and not'", "'between'", "'define'", "'from'", 
		"'where'", "'within'", "'consuming'", "BOOL_VAL", "VALTYPE", "SEL_POLICY", 
		"AGGR_FUN", "OPERATOR", "BINOP_MUL", "BINOP_ADD", "FLOAT", "INTEGER", 
		"STRING_VAL", "PRED_NAME", "ATTR_NAME", "PARAM_NAME", "WS"
	};
	public static final int
		RULE_static_reference = 0, RULE_packet_reference = 1, RULE_param_mapping = 2, 
		RULE_param_atom = 3, RULE_agg_one_reference = 4, RULE_agg_between = 5, 
		RULE_aggregate_atom = 6, RULE_expr = 7, RULE_attr_declaration = 8, RULE_staticAttr_definition = 9, 
		RULE_attr_definition = 10, RULE_attr_constraint = 11, RULE_attr_parameter = 12, 
		RULE_ce_definition = 13, RULE_predicate = 14, RULE_terminator = 15, RULE_positive_predicate = 16, 
		RULE_neg_one_reference = 17, RULE_neg_between = 18, RULE_negative_predicate = 19, 
		RULE_pattern_predicate = 20, RULE_definitions = 21, RULE_consuming = 22, 
		RULE_pattern = 23, RULE_ending_rule = 24, RULE_trex_rule = 25;
	public static final String[] ruleNames = {
		"static_reference", "packet_reference", "param_mapping", "param_atom", 
		"agg_one_reference", "agg_between", "aggregate_atom", "expr", "attr_declaration", 
		"staticAttr_definition", "attr_definition", "attr_constraint", "attr_parameter", 
		"ce_definition", "predicate", "terminator", "positive_predicate", "neg_one_reference", 
		"neg_between", "negative_predicate", "pattern_predicate", "definitions", 
		"consuming", "pattern", "ending_rule", "trex_rule"
	};

	@Override
	public String getGrammarFileName() { return "TESLA.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TESLAParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Static_referenceContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(TESLAParser.FLOAT, 0); }
		public TerminalNode STRING_VAL() { return getToken(TESLAParser.STRING_VAL, 0); }
		public TerminalNode BOOL_VAL() { return getToken(TESLAParser.BOOL_VAL, 0); }
		public TerminalNode INTEGER() { return getToken(TESLAParser.INTEGER, 0); }
		public Static_referenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_static_reference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterStatic_reference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitStatic_reference(this);
		}
	}

	public final Static_referenceContext static_reference() throws RecognitionException {
		Static_referenceContext _localctx = new Static_referenceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_static_reference);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL_VAL) | (1L << FLOAT) | (1L << INTEGER) | (1L << STRING_VAL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Packet_referenceContext extends ParserRuleContext {
		public TerminalNode PRED_NAME() { return getToken(TESLAParser.PRED_NAME, 0); }
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public Packet_referenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packet_reference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterPacket_reference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitPacket_reference(this);
		}
	}

	public final Packet_referenceContext packet_reference() throws RecognitionException {
		Packet_referenceContext _localctx = new Packet_referenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packet_reference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(54); match(PRED_NAME);
			setState(55); match(4);
			setState(56); match(ATTR_NAME);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_mappingContext extends ParserRuleContext {
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public TerminalNode PARAM_NAME() { return getToken(TESLAParser.PARAM_NAME, 0); }
		public Param_mappingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_mapping; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterParam_mapping(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitParam_mapping(this);
		}
	}

	public final Param_mappingContext param_mapping() throws RecognitionException {
		Param_mappingContext _localctx = new Param_mappingContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_param_mapping);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); match(ATTR_NAME);
			setState(59); match(3);
			setState(60); match(PARAM_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_atomContext extends ParserRuleContext {
		public Static_referenceContext static_reference() {
			return getRuleContext(Static_referenceContext.class,0);
		}
		public Packet_referenceContext packet_reference() {
			return getRuleContext(Packet_referenceContext.class,0);
		}
		public TerminalNode PARAM_NAME() { return getToken(TESLAParser.PARAM_NAME, 0); }
		public Param_atomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterParam_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitParam_atom(this);
		}
	}

	public final Param_atomContext param_atom() throws RecognitionException {
		Param_atomContext _localctx = new Param_atomContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param_atom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			switch (_input.LA(1)) {
			case PRED_NAME:
				{
				setState(62); packet_reference();
				}
				break;
			case PARAM_NAME:
				{
				setState(63); match(PARAM_NAME);
				}
				break;
			case BOOL_VAL:
			case FLOAT:
			case INTEGER:
			case STRING_VAL:
				{
				setState(64); static_reference();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Agg_one_referenceContext extends ParserRuleContext {
		public TerminalNode PRED_NAME() { return getToken(TESLAParser.PRED_NAME, 0); }
		public TerminalNode WITHIN() { return getToken(TESLAParser.WITHIN, 0); }
		public TerminalNode INTEGER() { return getToken(TESLAParser.INTEGER, 0); }
		public TerminalNode FROM() { return getToken(TESLAParser.FROM, 0); }
		public Agg_one_referenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agg_one_reference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAgg_one_reference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAgg_one_reference(this);
		}
	}

	public final Agg_one_referenceContext agg_one_reference() throws RecognitionException {
		Agg_one_referenceContext _localctx = new Agg_one_referenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_agg_one_reference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(67); match(WITHIN);
			setState(68); match(INTEGER);
			setState(69); match(FROM);
			setState(70); match(PRED_NAME);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Agg_betweenContext extends ParserRuleContext {
		public List<TerminalNode> PRED_NAME() { return getTokens(TESLAParser.PRED_NAME); }
		public TerminalNode PRED_NAME(int i) {
			return getToken(TESLAParser.PRED_NAME, i);
		}
		public Agg_betweenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agg_between; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAgg_between(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAgg_between(this);
		}
	}

	public final Agg_betweenContext agg_between() throws RecognitionException {
		Agg_betweenContext _localctx = new Agg_betweenContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_agg_between);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(72); match(13);
			setState(73); match(PRED_NAME);
			setState(74); match(10);
			setState(75); match(PRED_NAME);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aggregate_atomContext extends ParserRuleContext {
		public List<Attr_parameterContext> attr_parameter() {
			return getRuleContexts(Attr_parameterContext.class);
		}
		public Agg_betweenContext agg_between() {
			return getRuleContext(Agg_betweenContext.class,0);
		}
		public Agg_one_referenceContext agg_one_reference() {
			return getRuleContext(Agg_one_referenceContext.class,0);
		}
		public Attr_parameterContext attr_parameter(int i) {
			return getRuleContext(Attr_parameterContext.class,i);
		}
		public Attr_constraintContext attr_constraint(int i) {
			return getRuleContext(Attr_constraintContext.class,i);
		}
		public Packet_referenceContext packet_reference() {
			return getRuleContext(Packet_referenceContext.class,0);
		}
		public TerminalNode AGGR_FUN() { return getToken(TESLAParser.AGGR_FUN, 0); }
		public List<Attr_constraintContext> attr_constraint() {
			return getRuleContexts(Attr_constraintContext.class);
		}
		public Aggregate_atomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggregate_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAggregate_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAggregate_atom(this);
		}
	}

	public final Aggregate_atomContext aggregate_atom() throws RecognitionException {
		Aggregate_atomContext _localctx = new Aggregate_atomContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_aggregate_atom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); match(AGGR_FUN);
			setState(78); match(8);
			setState(79); packet_reference();
			setState(80); match(8);
			setState(95);
			_la = _input.LA(1);
			if (_la==6 || _la==ATTR_NAME) {
				{
				setState(83);
				switch (_input.LA(1)) {
				case 6:
					{
					setState(81); attr_parameter();
					}
					break;
				case ATTR_NAME:
					{
					setState(82); attr_constraint();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==5) {
					{
					{
					setState(85); match(5);
					setState(88);
					switch (_input.LA(1)) {
					case 6:
						{
						setState(86); attr_parameter();
						}
						break;
					case ATTR_NAME:
						{
						setState(87); attr_constraint();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(94);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(97); match(2);
			setState(98); match(2);
			setState(101);
			switch (_input.LA(1)) {
			case WITHIN:
				{
				setState(99); agg_one_reference();
				}
				break;
			case 13:
				{
				setState(100); agg_between();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public TerminalNode BINOP_MUL() { return getToken(TESLAParser.BINOP_MUL, 0); }
		public Param_atomContext param_atom() {
			return getRuleContext(Param_atomContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Aggregate_atomContext aggregate_atom() {
			return getRuleContext(Aggregate_atomContext.class,0);
		}
		public TerminalNode BINOP_ADD() { return getToken(TESLAParser.BINOP_ADD, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			switch (_input.LA(1)) {
			case 8:
				{
				setState(104); match(8);
				setState(105); expr(0);
				setState(106); match(2);
				}
				break;
			case BOOL_VAL:
			case AGGR_FUN:
			case FLOAT:
			case INTEGER:
			case STRING_VAL:
			case PRED_NAME:
			case PARAM_NAME:
				{
				setState(110);
				switch (_input.LA(1)) {
				case BOOL_VAL:
				case FLOAT:
				case INTEGER:
				case STRING_VAL:
				case PRED_NAME:
				case PARAM_NAME:
					{
					setState(108); param_atom();
					}
					break;
				case AGGR_FUN:
					{
					setState(109); aggregate_atom();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(120);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(114);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(115); match(BINOP_MUL);
						setState(116); expr(5);
						}
						break;

					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(117);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(118); match(BINOP_ADD);
						setState(119); expr(4);
						}
						break;
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Attr_declarationContext extends ParserRuleContext {
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public TerminalNode VALTYPE() { return getToken(TESLAParser.VALTYPE, 0); }
		public Attr_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAttr_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAttr_declaration(this);
		}
	}

	public final Attr_declarationContext attr_declaration() throws RecognitionException {
		Attr_declarationContext _localctx = new Attr_declarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_attr_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125); match(ATTR_NAME);
			setState(126); match(7);
			setState(127); match(VALTYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StaticAttr_definitionContext extends ParserRuleContext {
		public Static_referenceContext static_reference() {
			return getRuleContext(Static_referenceContext.class,0);
		}
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public StaticAttr_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_staticAttr_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterStaticAttr_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitStaticAttr_definition(this);
		}
	}

	public final StaticAttr_definitionContext staticAttr_definition() throws RecognitionException {
		StaticAttr_definitionContext _localctx = new StaticAttr_definitionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_staticAttr_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); match(ATTR_NAME);
			setState(130); match(11);
			setState(131); static_reference();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_definitionContext extends ParserRuleContext {
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Attr_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAttr_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAttr_definition(this);
		}
	}

	public final Attr_definitionContext attr_definition() throws RecognitionException {
		Attr_definitionContext _localctx = new Attr_definitionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_attr_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); match(ATTR_NAME);
			setState(134); match(11);
			setState(135); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_constraintContext extends ParserRuleContext {
		public Static_referenceContext static_reference() {
			return getRuleContext(Static_referenceContext.class,0);
		}
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public TerminalNode OPERATOR() { return getToken(TESLAParser.OPERATOR, 0); }
		public Attr_constraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAttr_constraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAttr_constraint(this);
		}
	}

	public final Attr_constraintContext attr_constraint() throws RecognitionException {
		Attr_constraintContext _localctx = new Attr_constraintContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_attr_constraint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); match(ATTR_NAME);
			setState(138); match(OPERATOR);
			setState(139); static_reference();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_parameterContext extends ParserRuleContext {
		public TerminalNode ATTR_NAME() { return getToken(TESLAParser.ATTR_NAME, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode VALTYPE() { return getToken(TESLAParser.VALTYPE, 0); }
		public TerminalNode OPERATOR() { return getToken(TESLAParser.OPERATOR, 0); }
		public Attr_parameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterAttr_parameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitAttr_parameter(this);
		}
	}

	public final Attr_parameterContext attr_parameter() throws RecognitionException {
		Attr_parameterContext _localctx = new Attr_parameterContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_attr_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); match(6);
			setState(142); match(VALTYPE);
			setState(143); match(1);
			setState(144); match(ATTR_NAME);
			setState(145); match(OPERATOR);
			setState(146); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ce_definitionContext extends ParserRuleContext {
		public TerminalNode PRED_NAME() { return getToken(TESLAParser.PRED_NAME, 0); }
		public Attr_declarationContext attr_declaration(int i) {
			return getRuleContext(Attr_declarationContext.class,i);
		}
		public List<Attr_declarationContext> attr_declaration() {
			return getRuleContexts(Attr_declarationContext.class);
		}
		public Ce_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ce_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterCe_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitCe_definition(this);
		}
	}

	public final Ce_definitionContext ce_definition() throws RecognitionException {
		Ce_definitionContext _localctx = new Ce_definitionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_ce_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148); match(PRED_NAME);
			setState(149); match(8);
			setState(158);
			_la = _input.LA(1);
			if (_la==ATTR_NAME) {
				{
				setState(150); attr_declaration();
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==5) {
					{
					{
					setState(151); match(5);
					setState(152); attr_declaration();
					}
					}
					setState(157);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(160); match(2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public List<Attr_parameterContext> attr_parameter() {
			return getRuleContexts(Attr_parameterContext.class);
		}
		public Attr_parameterContext attr_parameter(int i) {
			return getRuleContext(Attr_parameterContext.class,i);
		}
		public TerminalNode PRED_NAME() { return getToken(TESLAParser.PRED_NAME, 0); }
		public Attr_constraintContext attr_constraint(int i) {
			return getRuleContext(Attr_constraintContext.class,i);
		}
		public Param_mappingContext param_mapping(int i) {
			return getRuleContext(Param_mappingContext.class,i);
		}
		public List<Param_mappingContext> param_mapping() {
			return getRuleContexts(Param_mappingContext.class);
		}
		public List<Attr_constraintContext> attr_constraint() {
			return getRuleContexts(Attr_constraintContext.class);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).enterPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TESLAListener ) ((TESLAListener)listener).exitPredicate(this);
		}
	}
